update lecture note

--- a/HTML/Class - 100/Forms/forms.html
+++ b/HTML/Class - 100/Forms/forms.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>HTML Forms Lecture - Beginner Friendly</title>
+  <title>HTML Forms Lecture</title>
 </head>
 <body>
   <h1>HTML Forms</h1>
   <p>
-    Welcome! In this class we will learn about HTML forms step by step.  
+    In this class we will learn about HTML forms step by step.  
     Forms are one of the most important parts of a website because they let users send information to the server.  
     Examples: login forms, signup forms, search bars, contact forms.
   </p>
@@ -58,7 +58,7 @@
   <p>
     A <b>label</b> tells the user what a form field is for.  
     When you use <code>for</code> in a label, it links the label to the input’s <code>id</code>.  
-    This means if the user clicks the label, the input gets selected — making forms easier to use.
+    This means if the user clicks the label, the input gets selected, making forms easier to use.
   </p>
   <label for="email">Email Address:</label>
   <input type="email" id="email" name="email">
